--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bin"]
 	path = bin
 	url = git@github.com:X-UI-Unofficial/bin.git
+[submodule "web"]
+	path = web
+	url = git@github.com:X-UI-Unofficial/web.git
