--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "web"]
 	path = web
 	url = git@github.com:X-UI-Unofficial/web.git
+[submodule "translation"]
+	path = translation
+	url = git@github.com:X-UI-Unofficial/translation.git
