submodule: remove .git folder at build
Signed-off-by: dopaemon <polarisdp@gmail.com>

--- a/.github/workflows/x-ui.yml
+++ b/.github/workflows/x-ui.yml
@@ -59,4 +59,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          rm -rf translation/.git
+          rm -rf bin/.git
+          rm -rf web/.git
           ./build
