--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -1,12 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: X-UI Release
+name: GoLang modules Upgrade
 
 # Allows you to run this workflow manually from the Actions tab
 on:
   workflow_dispatch:
   schedule:
-    - cron: "30 0 * * 1,5"
+    - cron: "0 0 * * *"
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -25,10 +25,6 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '^1.19.3' # The Go version to download (if necessary) and use.
-      - name: Start Setup
-        run: |
-          sudo apt-get update
-          sudo apt-get install -yq gcc-aarch64-linux-gnu gcc-s390x-linux-gnu gcc-riscv64-linux-gnu
       - name: Start Setup Submodule
         run: |
           mkdir -p $HOME/.ssh
@@ -38,15 +34,18 @@ jobs:
           git submodule update --init
           git submodule update --recursive --remote
           cd ..
-      - name: Start Building X-UI
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Golang upgrade module
         run: |
-          rm -rf translation/.git
-          rm -rf bin/.git
-          rm -rf web/.git
-          rm -rf translation/.placeholder
-          rm -rf bin/.placeholder
-          rm -rf web/.placeholder
-          mv translation web/translation
-          ./build
+          go mod tidy
+          go get -u
+          go mod download
+      - name: Start push GoLang module
+        run: |
+          git config --local user.name "dopaemon"
+          git config --local user.email "polarisdp@gmail.com"
+          git remote rm origin
+          git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUBTOKEN }}@github.com/${{ github.repository }}"
+          git gc --aggressive
+          git add --all
+          git commit -s -m "GoLang: Upgrade go mod $(date +%Y%m%d%H%M)"
+          git push -f -u origin main
