add vmess Aead Force to false  for ios connections
Signed-off-by: dopaemon <polarisdp@gmail.com>

--- a/x-ui.service
+++ b/x-ui.service
@@ -4,6 +4,7 @@ After=network.target
 Wants=network.target
 
 [Service]
+Environment="XRAY_VMESS_AEAD_FORCED=false"
 Type=simple
 WorkingDirectory=/usr/local/x-ui/
 ExecStart=/usr/local/x-ui/x-ui
